--- a/MarcoBartoli.htm
+++ b/MarcoBartoli.htm
@@ -11,7 +11,7 @@
   
 <div class="container"><nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Marco Bartoli</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -25,7 +25,7 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+            Esercizi JS
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="es1.htm">Es1 input</a></li>
