--- a/MarcoBartoli.htm
+++ b/MarcoBartoli.htm
@@ -28,10 +28,10 @@
             Esercizi JS
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="es1.htm">Es1 input</a></li>
-            <li><a class="dropdown-item" href="es2.htm">Es 2 while</a></li>
-            <li><a class="dropdown-item" href="es3.htm">Es 3 while</a></li>
-            <li><a class="dropdown-item" href="es4.htm">Es 4 ciclo</a></li>
+            <li><a class="dropdown-item" href="Es1.htm">Es1 input</a></li>
+            <li><a class="dropdown-item" href="Es2.htm">Es 2 while</a></li>
+            <li><a class="dropdown-item" href="Es3.htm">Es 3 while</a></li>
+            <li><a class="dropdown-item" href="Es4.htm">Es 4 ciclo</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
