--- a/MarcoBartoli.htm
+++ b/MarcoBartoli.htm
@@ -32,6 +32,9 @@
             <li><a class="dropdown-item" href="Es2.htm">Es 2 while</a></li>
             <li><a class="dropdown-item" href="Es3.htm">Es 3 while</a></li>
             <li><a class="dropdown-item" href="Es4.htm">Es 4 ciclo</a></li>
+            <li><a class="dropdown-item" href="grafica1.htm">grafica1 </a></li>
+            <li><a class="dropdown-item" href="grafica2.htm">grafica2 </a></li>
+            <li><a class="dropdown-item" href="grafica3.htm">grafica3 </a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
