--- a/MarcoBartoli.htm
+++ b/MarcoBartoli.htm
@@ -35,6 +35,7 @@
             <li><a class="dropdown-item" href="grafica1.htm">grafica1 </a></li>
             <li><a class="dropdown-item" href="grafica2.htm">grafica2 </a></li>
             <li><a class="dropdown-item" href="grafica3.htm">grafica3 </a></li>
+            <li><a class="dropdown-item" href="CompitoInClasse.htm">CompitoInClasse </a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
