--- a/MarcoBartoli.htm
+++ b/MarcoBartoli.htm
@@ -36,6 +36,8 @@
             <li><a class="dropdown-item" href="grafica2.htm">grafica2 </a></li>
             <li><a class="dropdown-item" href="grafica3.htm">grafica3 </a></li>
             <li><a class="dropdown-item" href="CompitoInClasse.htm">CompitoInClasse </a></li>
+            <li><a class="dropdown-item" href="CompitoInClasse2.htm">CompitoInClasse 2 </a></li>
+            <li><a class="dropdown-item" href="CompitoInClasse3.htm">CompitoInClasse 3 </a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
