--- a/MarcoBartoli.htm
+++ b/MarcoBartoli.htm
@@ -38,6 +38,8 @@
             <li><a class="dropdown-item" href="CompitoInClasse.htm">CompitoInClasse </a></li>
             <li><a class="dropdown-item" href="CompitoInClasse2.htm">CompitoInClasse 2 </a></li>
             <li><a class="dropdown-item" href="CompitoInClasse3.htm">CompitoInClasse 3 </a></li>
+             <li><a class="dropdown-item" href="Esercizi base analisi numerica.htm">Esercizi base analisi numerica </a></li>
+            
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
