--- a/MarcoBartoli.htm
+++ b/MarcoBartoli.htm
@@ -39,6 +39,7 @@
             <li><a class="dropdown-item" href="CompitoInClasse2.htm">CompitoInClasse 2 </a></li>
             <li><a class="dropdown-item" href="CompitoInClasse3.htm">CompitoInClasse 3 </a></li>
              <li><a class="dropdown-item" href="Esercizi base analisi numerica.htm">Esercizi base analisi numerica </a></li>
+             <li><a class="dropdown-item" href="numeri fino a 1000 divisori.htm">numeri fino a 1000 divisori</a></li>
             
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
