--- a/MarcoBartoli.htm
+++ b/MarcoBartoli.htm
@@ -41,6 +41,7 @@
              <li><a class="dropdown-item" href="Esercizi base analisi numerica.htm">Esercizi base analisi numerica </a></li>
             <li><a class="dropdown-item" href="divisori fino a 10000.htm">divisori fino a 10000.htm </a></li>
              <li><a class="dropdown-item" href="numeri fino a 1000 divisori.htm">numeri fino a 1000 divisori</a></li>
+            <li><a class="dropdown-item" href="numeri primi a intervalli di 100.htm">numeri primi a intervalli di 100.htm</a></li>numeri primi a intervalli di 100.htm
             
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
