--- a/MarcoBartoli.htm
+++ b/MarcoBartoli.htm
@@ -42,6 +42,7 @@
             <li><a class="dropdown-item" href="divisori fino a 10000.htm">divisori fino a 10000.htm</a></li>
              <li><a class="dropdown-item" href="numeri fino a 1000 divisori.htm">numeri fino a 1000 divisori</a></li>
             <li><a class="dropdown-item" href="numeri primi a intervalli di 100.htm">numeri primi a intervalli di 100.htm</a></li>
+            <li><a class="dropdown-item" href="Esercitazione 1 temporizzatore.htm">Esercitazione 1 temporizzatore </a></li>
             
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
