--- a/MarcoBartoli.htm
+++ b/MarcoBartoli.htm
@@ -44,6 +44,7 @@
             <li><a class="dropdown-item" href="numeri primi a intervalli di 100.htm">numeri primi a intervalli di 100.htm</a></li>
             <li><a class="dropdown-item" href="Esercitazione 1 temporizzatore.htm">Esercitazione 1 temporizzatore </a></li>
             <li><a class="dropdown-item" href="ripasso.htm">ripasso </a></li>
+             <li><a class="dropdown-item" href="ripassoPariDispari.htm">ripasso pari o dispari </a></li>
             
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
