--- a/MarcoBartoli.htm
+++ b/MarcoBartoli.htm
@@ -45,6 +45,7 @@
             <li><a class="dropdown-item" href="Esercitazione 1 temporizzatore.htm">Esercitazione 1 temporizzatore </a></li>
             <li><a class="dropdown-item" href="ripasso.htm">ripasso </a></li>
              <li><a class="dropdown-item" href="ripassoPariDispari.htm">ripasso pari o dispari </a></li>
+            <li><a class="dropdown-item" href="ripassoNumeriPrimi.htm">ripasso numeri primi o no</a></li>
             
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
