--- a/MarcoBartoli.htm
+++ b/MarcoBartoli.htm
@@ -46,6 +46,7 @@
             <li><a class="dropdown-item" href="ripasso.htm">ripasso </a></li>
              <li><a class="dropdown-item" href="ripassoPariDispari.htm">ripasso pari o dispari </a></li>
             <li><a class="dropdown-item" href="ripassoNumeroPrimo.htm">ripasso numeri primi o no</a></li>
+            <li><a class="dropdown-item" href="differenza.htm">differenza</a></li>
             
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
