--- a/MarcoBartoli.htm
+++ b/MarcoBartoli.htm
@@ -38,15 +38,16 @@
             <li><a class="dropdown-item" href="CompitoInClasse.htm">CompitoInClasse </a></li>
             <li><a class="dropdown-item" href="CompitoInClasse2.htm">CompitoInClasse 2 </a></li>
             <li><a class="dropdown-item" href="CompitoInClasse3.htm">CompitoInClasse 3 </a></li>
-             <li><a class="dropdown-item" href="Esercizi base analisi numerica.htm">Esercizi base analisi numerica </a></li>
+            <li><a class="dropdown-item" href="Esercizi base analisi numerica.htm">Esercizi base analisi numerica </a></li>
             <li><a class="dropdown-item" href="divisori fino a 10000.htm">divisori fino a 10000.htm</a></li>
-             <li><a class="dropdown-item" href="numeri fino a 1000 divisori.htm">numeri fino a 1000 divisori</a></li>
+            <li><a class="dropdown-item" href="numeri fino a 1000 divisori.htm">numeri fino a 1000 divisori</a></li>
             <li><a class="dropdown-item" href="numeri primi a intervalli di 100.htm">numeri primi a intervalli di 100.htm</a></li>
             <li><a class="dropdown-item" href="Esercitazione 1 temporizzatore.htm">Esercitazione 1 temporizzatore </a></li>
             <li><a class="dropdown-item" href="ripasso.htm">ripasso </a></li>
-             <li><a class="dropdown-item" href="ripassoPariDispari.htm">ripasso pari o dispari </a></li>
+            <li><a class="dropdown-item" href="ripassoPariDispari.htm">ripasso pari o dispari </a></li>
             <li><a class="dropdown-item" href="ripassoNumeroPrimo.htm">ripasso numeri primi o no</a></li>
             <li><a class="dropdown-item" href="differenza.htm">differenza</a></li>
+            <li><a class="dropdown-item" href="giocoEducativo.htm">gioco educativo</a></li>
             
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
