--- a/MarcoBartoli.htm
+++ b/MarcoBartoli.htm
@@ -48,6 +48,7 @@
             <li><a class="dropdown-item" href="ripassoNumeroPrimo.htm">ripasso numeri primi o no</a></li>
             <li><a class="dropdown-item" href="differenza.htm">differenza</a></li>
             <li><a class="dropdown-item" href="giocoEducativo.htm">gioco educativo</a></li>
+            <li><a class="dropdown-item" href="DOCUMENTAZIONE%GIOCO%EDUCATIVO.pdf">Documentazione gioco educativo</a></li>
           
             
             <li><hr class="dropdown-divider"></li>
